--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "axios": "^0.21.1",
+    "canvasjs-react-charts": "^1.0.5",
+    "d3-scale": "^3.2.3",
     "react": "^17.0.1",
+    "react-canvas-js": "^1.0.1",
     "react-dom": "^17.0.1",
+    "react-donut-chart": "^1.1.8",
     "react-scripts": "4.0.2",
+    "react-simple-maps": "^2.3.0",
+    "react-tooltip": "^4.2.13",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
