--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^2.7.4",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@patternfly/react-charts": "^6.14.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
     "canvasjs-react-charts": "^1.0.5",
+    "chart.js": "^2.9.4",
     "d3-scale": "^3.2.3",
+    "ng2-charts": "^2.4.2",
+    "patternfly-react": "^2.39.17",
     "react": "^17.0.1",
     "react-canvas-js": "^1.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-donut-chart": "^1.1.8",
     "react-scripts": "4.0.2",
